# RetraceMX

./: .dockerignore  .env.example  .env.production.example  .gitignore  .replit  README.md  docker-compose.hardware.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  replit.md
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-http-equiv-content_1777145023859.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-http-equiv-content_1777176094185.txt  Pasted-Act-a-como-un-arquitecto-de-software-senior-y-desarroll_1777066873825.txt  Pasted-Necesito-mejorar-el-m-dulo-Caja-del-sistema-Acopio360-u_1777179573768.txt
backend/: Dockerfile  manage.py  pytest.ini  requirements.txt
backend/acopio360/: asgi.py  settings.py  urls.py  wsgi.py
backend/docs/: architecture.md
backend/tests/: test_devices.py  test_domain.py  test_processing.py
deploy/: Caddyfile  DEPLOYMENT.md  POST_DEPLOY_CHECKLIST.md  RUNBOOK.md  server-deploy.sh
docs/: architecture.md  device-integration.md  domain-model.md
docs/manuales/: README.md  guias-rapidas.md  manual-administrador.md  manual-caja.md  manual-consulta-reportes.md  manual-general.md  manual-inventario-acopio.md  manual-logistica.md  manual-operador.md  manual-procesamiento.md  (+8 more)
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.prod.conf  package-lock.json  package.json  railway.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: dev-all.mjs  post-merge.sh  run-backend-local.cmd  run-backend-local.ps1  run-frontend-local.cmd  scale_bridge.cmd  scale_bridge.ps1
(+159 files in other folders)
