[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-filter>=24.2,<25.0",
    "djangorestframework>=3.15,<4.0",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.0,<2.0",
]
